name:                gearman-haskell
version:             0.2.0.0
synopsis:            Haskell implementation of the Gearman protocol.
-- description:         
homepage:            https://github.com/anchor/gearman-haskell
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Gearman
                       System.Gearman.Error
                       System.Gearman.Protocol
                       System.Gearman.Connection
                       System.Gearman.Worker
  other-modules:       System.Gearman.Job
  build-depends:       base >=4.6,
                       data-endian,
                       bytestring,
                       binary,
                       HTTP,
                       network,
                       transformers,
                       mtl,
                       containers,
                       async,
                       stm,
                       stm-chans
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
                       -Wall

test-suite             check
    type:              exitcode-stdio-1.0
    build-depends:     base >= 4.6,
                       bytestring,
                       gearman-haskell,
                       HUnit,
                       hspec,
                       transformers,
                       mtl
    hs-source-dirs:    tests
    main-is:           check.hs
    default-language:  Haskell2010
